# runllm

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  ROADMAP.md  TIPS.md  pyproject.toml
.github/: release_template.md
docs/: README.md  agent-scaffold-guide.md  authoring-guide.md  cli.md  composition.md  configuration.md  errors.md  global-install.md  mcp.md  migration.md  multistep-apps.md  ollama.md  onboarding.md  provider-credentials.md  recovery-playbook.md  release-process.md  rllm-spec.md  schema-cookbook.md
examples/: code_patch_planner.rllm  compose_summary_keywords.rllm  extract_keywords.rllm  intent_router.rllm  meeting_extractor.rllm  ocr_postprocessor.rllm  policy_guard.rllm  risk_score_aggregator.rllm  schema_repair_proxy.rllm  summary.rllm  support_pipeline.rllm  support_reply_drafter.rllm  test_case_generator.rllm
runllm/: __init__.py  cli.py  config.py  errors.py  executor.py  help_content.py  litellm_params.py  mcp_registry.py  mcp_server.py  mcp_utils.py  mcp_workflow_registry.py  models.py  ollama.py  onboarding.py  opencode.py  parser.py  pyblocks.py  stats.py  templating.py  utils.py  validation.py
tests/: test_cli_config.py  test_cli_help.py  test_config.py  test_context.py  test_examples_apps.py  test_examples_ollama_live.py  test_executor.py  test_litellm_params.py  test_mcp_registry.py  test_mcp_server.py  test_no_plaintext_api_keys.py  test_ollama.py  test_onboarding.py  test_onboarding_ollama_live.py  test_opencode.py  test_parser.py  test_parser_errors.py  test_pyblocks.py  test_stats.py  (+2 more)
(+13 files in other folders)
